# toolops

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  REFERENCES.md  docker-compose.yml  pyproject.toml  toolops.yaml
.github/workflows/: ci.yml
config/: loki-config.yaml  otel-collector.yaml  prometheus.yml
demo-app/: main.py  otel_setup.py  requirements.txt  scenarios.py
docs/: architecture.md  llm-gateway-requirements.md  toolops-yaml-spec.md
extensions/toolops-observer/: index.ts  openclaw.plugin.json  package.json
frontend/: .env.development  Dockerfile  nginx.conf  package-lock.json  package.json
frontend/public/docs/: api.md  collector.md  configuration.md  demo-app.md  deployment.md  frontend.md  introduction.md  llm-intelligence.md  storage.md
frontend/src/: App.tsx  main.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Chain.tsx  Docs.tsx  Infra.tsx  LLM.tsx  Logs.tsx  Metrics.tsx  Overview.tsx  Traces.tsx
tests/: __init__.py  conftest.py  test_config.py  test_plugins.py
tests/e2e/: test_scenarios.py
tests/integration/: test_correlation.py  test_pipeline_logs.py  test_pipeline_metrics.py  test_pipeline_traces.py
tests/unit/: test_api.py  test_collector.py  test_storage.py  test_topology.py
toolops/: __init__.py
toolops/api/: app.py  deps.py
toolops/api/routes/: correlate.py  infra.py  llm.py  logs.py  metrics.py  overview.py  topology.py  traces.py
toolops/cli/: __init__.py  env.py  init.py  main.py  status.py
toolops/collector/: __init__.py  cc_collector.py  loki.py  otel.py  prometheus.py
toolops/config/: __init__.py  loader.py  schema.py  settings.py  topology.py
toolops/config/templates/: docker-compose.yaml.j2  toolops.yaml.j2
toolops/gateway/: __init__.py  __main__.py  config.py  parsers.py  proxy.py
toolops/plugins/: __init__.py  base.py
toolops/plugins/cache/: __init__.py  base.py  memory.py  redis.py
toolops/plugins/monitor/: __init__.py  base.py  null.py  phoenix.py
toolops/plugins/vectorstore/: __init__.py  base.py  chroma.py  milvus.py  qdrant.py
toolops/pricing/: __init__.py  models.py
toolops/storage/: __init__.py  clickhouse.py  schema.sql
toolops/utils/: __init__.py  docker.py
