[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toolops"
version = "0.1.0"
description = "AI app infrastructure, plug and play"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ToolOps Contributors" }]
keywords = ["ai", "infrastructure", "vectorstore", "cache", "monitoring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
milvus = ["pymilvus>=2.4.0"]
qdrant = ["qdrant-client>=1.9.0"]
chroma = ["chromadb>=0.5.0"]
redis = ["redis>=5.0.0"]
phoenix = ["arize-phoenix>=4.0.0", "opentelemetry-sdk>=1.24.0"]
all = [
    "pymilvus>=2.4.0",
    "qdrant-client>=1.9.0",
    "chromadb>=0.5.0",
    "redis>=5.0.0",
    "arize-phoenix>=4.0.0",
    "opentelemetry-sdk>=1.24.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
toolops = "toolops.cli.main:app"

[project.urls]
Homepage = "https://github.com/toolops/toolops"
Repository = "https://github.com/toolops/toolops"

[tool.hatch.build.targets.wheel]
packages = ["toolops"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=toolops --cov-report=term-missing"

[tool.coverage.run]
omit = ["tests/*", "*/templates/*"]
