[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toolops"
version = "0.2.0"
description = "Protocol-driven AI application observability platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ToolOps Contributors" }]
keywords = ["ai", "observability", "metrics", "traces", "logs", "clickhouse"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "clickhouse-connect>=0.7.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
toolops = "toolops.cli.main:app"

[project.urls]
Homepage = "https://github.com/toolops/toolops"
Repository = "https://github.com/toolops/toolops"

[tool.hatch.build.targets.wheel]
packages = ["toolops"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008", "E501", "UP042"]

[tool.ruff.lint.per-file-ignores]
"toolops/gateway/proxy.py" = ["E402"]
"toolops/gateway/__main__.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "toolops.cli.*"
disable_error_code = ["misc", "untyped-decorator"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=toolops --cov-report=term-missing"
markers = [
    "integration: requires Docker services running",
    "e2e: end-to-end tests",
]

[tool.coverage.run]
omit = ["tests/*"]
